src/test/ui/const-generics/issues/issue-69913.stderr
error[E0658]: const generics are unstable
  --> $DIR/issue-69913.rs:1:14
   |
LL | fn foo<const A: usize, const B: usize>(bar: [usize; A + B]) {
   |              ^
   |
   = note: see issue #44580 <https://github.com/rust-lang/rust/issues/44580> for more information
   = help: add `#![feature(const_generics)]` to the crate attributes to enable

error: aborting due to previous error

For more information about this error, try `rustc --explain E0658`.
