src/test/ui/const-generics/issues/issue-69913.rs
fn foo<const A: usize, const B: usize>(bar: [usize; A + B]) {
    //~^ ERROR const generics are unstable
}

fn main() { }
